Fixing an overflow issue with the header.

--- a/css/layout-header.less
+++ b/css/layout-header.less
@@ -22,12 +22,6 @@
 	-moz-box-direction: normal;
 	-webkit-box-orient: horizontal;
 	-moz-box-orient: horizontal;
-	-webkit-flex-direction: row;
-	-ms-flex-direction: row;
-	flex-direction: row;
-	-webkit-flex-wrap: wrap;
-	-ms-flex-wrap: wrap;
-	flex-wrap: wrap;
 	-webkit-box-pack: start;
 	-moz-box-pack: start;
 	-webkit-justify-content: flex-start;
@@ -41,6 +35,9 @@
 	-webkit-align-items: center;
 	-ms-flex-align: center;
 	align-items: center;
+	overflow: hidden;
+    height: 200px;
+	
 	@media @tablet {
 		display:initial;
 	}
